# traceguard

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: c06c766372e7_initial_schema.py
src/: config.py  main.py
src/analysis/: __init__.py  agent.py  code_scanner.py  dependency_scanner.py  ownership.py
src/api/: __init__.py  routes.py
src/cve_sources/: __init__.py  aggregator.py  base.py  github_advisory.py  nvd.py  osv.py
src/database/: __init__.py  connection.py  models.py
src/traceguard/: __init__.py  config.py  main.py
src/traceguard/agents/: __init__.py  base.py  cve_context.py  dependency_usage.py  ownership.py  pipeline.py  security_intake.py  state.py  ticket_gen.py
src/traceguard/analyzers/: __init__.py  base.py  codeowners.py
src/traceguard/analyzers/treesitter/: __init__.py  javascript.py
src/traceguard/api/: main.py  router.py
src/traceguard/api/routes/: jobs.py  repos.py
src/traceguard/api/v1/: health.py  jobs.py  stats.py
src/traceguard/core/: database.py  exceptions.py
src/traceguard/cve_sources/: __init__.py  aggregator.py  base.py  github_advisory.py  osv.py
src/traceguard/db/: __init__.py  models.py  session.py
src/traceguard/github/: client.py
src/traceguard/graph/: __init__.py  nodes.py  runner.py  state.py  workflow.py
src/traceguard/jira/: __init__.py  client.py
src/traceguard/models/: __init__.py  base.py  cve.py  job.py
src/traceguard/openai/: __init__.py  client.py
src/traceguard/repositories/: __init__.py
src/traceguard/schemas/: analysis.py  cve.py  job.py  stats.py
src/traceguard/services/: job_service.py  stats_service.py
src/ui/: app.py
streamlit_app/: api_client.py  app.py
streamlit_app/pages/: 1_Dashboard.py  2_New_Scan.py  3_Job_Details.py
tests/: __init__.py
ui/: app.py
