[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traceguard"
version = "0.1.0"
description = "Agentic CVE triage and ownership automation tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "TraceGuard Team" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "streamlit>=1.31.0",
    "openai>=1.12.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "gitpython>=3.1.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[project.scripts]
traceguard = "src.main:run"
traceguard-ui = "src.ui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
